--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
         </div>
     </section>
     <section class="feature-rail">
+        <div class="rail-heading">Available Colors</div>
         <div class="rail-track">
             <div class="rail-card"><span class="swatch" style="--swatch:#f8c9d3;"></span>Light Pink</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#e64980;"></span>Dark Pink</div>
