--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                 <div class="hero-meta">
                     <span class="meta-chip">Pre-order only</span>
                     <span class="meta-chip">Ships in 5-7 days</span>
+                    <span class="meta-chip">❤️</span>
                 </div>
             </div>
             <div class="hero-visual animate-on-scroll">
@@ -167,7 +168,7 @@
             <div class="rail-card"><span class="swatch" style="--swatch:#ffffff;"></span>White</div>
         </div>
     </section>
-    
+
         <section class="section highlights">
             <div class="container">
                 <h2 class="section-title animate-on-scroll">Explore Our Collection</h2>
