--- a/about.html
+++ b/about.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>About – Our Loves, Our Efforts</title>
+    <title>About — Our Loves, Our Efforts</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/main.js" defer></script>
 </head>
@@ -53,20 +53,20 @@
                         a memory for years to come.
                     </p>
                     <p>
-                        Every piece – whether it’s a bouquet, keychain, flower card, or special edition cake box –
+                        Every piece - whether it's a bouquet, keychain, flower card, or special edition cake box -
                         is carefully assembled by hand. We pay attention to details such as colour combinations,
                         balance, textures, and the story behind each order.
                     </p>
                     <h2>What We Believe</h2>
                     <ul class="about-list">
                         <li><strong>Handmade with Heart:</strong> We believe effort and sincerity are felt through handmade work.</li>
-                        <li><strong>Custom for You:</strong> No two people are the same – so we love adjusting colours, sizes, and designs to your preferences.</li>
+                        <li><strong>Custom for You:</strong> No two people are the same - so we love adjusting colours, sizes, and designs to your preferences.</li>
                         <li><strong>Lasting Gifts:</strong> Chenille flowers can be displayed, hugged, and kept as a reminder of a special moment.</li>
                     </ul>
                 </div>
                 <div class="about-image animate-on-scroll">
                     <div class="image-placeholder">
-                        Upload your “behind-the-scenes” or crafting image here
+                        Upload your â€œbehind-the-scenesâ€ or crafting image here
                     </div>
                 </div>
             </div>
@@ -93,7 +93,7 @@
                             and date needed.
                         </p>
                         <p>
-                            We’ll discuss options and adjust details according to your preferences.
+                            We'll discuss options and adjust details according to your preferences.
                         </p>
                     </div>
                     <div class="order-step-card animate-on-scroll">
@@ -109,7 +109,7 @@
                     <div class="order-step-card animate-on-scroll">
                         <h3>4. Delivery / Pick-Up</h3>
                         <p>
-                            We’ll arrange delivery or pick-up details depending on your location. Packaging will be
+                            We'll arrange delivery or pick-up details depending on your location. Packaging will be
                             done securely to protect your chenille flowers.
                         </p>
                     </div>
@@ -136,7 +136,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <p>© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
+            <p>Â© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
@@ -146,3 +146,4 @@
     </footer>
 </body>
 </html>
+
