--- a/products.html
+++ b/products.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Products – Our Loves, Our Efforts</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"><title>Products — Our Loves, Our Efforts</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/main.js" defer></script>
 </head>
@@ -18,12 +20,12 @@
             <nav class="main-nav">
                 <ul>
                     <li><a href="index.html#home">Home</a></li>
-                    <li><a href="#price">Price</a></li>
-                    <li><a href="#color">Color</a></li>
-                    <li><a href="#bouquet">Bouquet</a></li>
-                    <li><a href="#keychain">Keychain</a></li>
-                    <li><a href="#flower-card">Flower Card</a></li>
-                    <li><a href="#special-edition">Special Edition</a></li>
+                    <li><a href="products.html#price">Price</a></li>
+                    <li><a href="products.html#color">Color</a></li>
+                    <li><a href="products.html#bouquet">Bouquet</a></li>
+                    <li><a href="products.html#keychain">Keychain</a></li>
+                    <li><a href="products.html#flower-card">Flower Card</a></li>
+                    <li><a href="products.html#special-edition">Special Edition</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
@@ -46,7 +48,7 @@
         <!-- PRICE SECTION -->
         <section id="price" class="section">
             <div class="container">
-                <h2 class="section-title animate-on-scroll">Price – Single Pieces</h2>
+                <h2 class="section-title animate-on-scroll">Price - Single Pieces</h2>
                 <p class="section-subtitle animate-on-scroll">
                     Choose your favourite flower stems and mix them into a custom bouquet or arrangement.
                 </p>
@@ -65,7 +67,7 @@
                     <article class="product-card animate-on-scroll">
                         <h3>Sunflower</h3>
                         <p class="product-price">RM8.00 / piece</p>
-                        <p class="product-desc">Bright and bold – perfect as a focal flower.</p>
+                        <p class="product-desc">Bright and bold - perfect as a focal flower.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
                         <h3>Tulip</h3>
@@ -221,12 +223,12 @@
                     <article class="product-card animate-on-scroll">
                         <h3>Marron Bouquet (M)</h3>
                         <p class="product-price">RM30</p>
-                        <p class="product-desc">Standard medium-sized bouquet – multiple styling options available.</p>
+                        <p class="product-desc">Standard medium-sized bouquet - multiple styling options available.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
                         <h3>Green Bouquet (M)</h3>
                         <p class="product-price">RM30</p>
-                        <p class="product-desc">Standard medium-sized bouquet – multiple styling options available.</p>
+                        <p class="product-desc">Standard medium-sized bouquet - multiple styling options available.</p>
                     </article>
                     <article class="product-card animate-on-scroll">
                         <h3>Custom Bouquet A (L)</h3>
@@ -302,7 +304,7 @@
                     </article>
                     <article class="product-card animate-on-scroll">
                         <h3>Custom Character</h3>
-                        <p class="product-price">RM7.00 – RM10.00</p>
+                        <p class="product-price">RM7.00 - RM10.00</p>
                         <p class="product-desc">Fan-favourite characters in soft chenille form. Request your own character design (subject to feasibility).</p>
                     </article>
                 </div>
@@ -314,14 +316,14 @@
             <div class="container">
                 <h2 class="section-title animate-on-scroll">Flower Card</h2>
                 <p class="section-subtitle animate-on-scroll">
-                    A petite and thoughtful way to say “thank you”, “congratulations”, or “I’m thinking of you”.
+                    A petite and thoughtful way to say "thank you", "congratulations", or "I'm thinking of you".
                 </p>
                 <div class="single-product-layout animate-on-scroll">
                     <div class="single-product-image image-placeholder">
                         Upload your flower card image here
                     </div>
                     <div class="single-product-text">
-                        <h3>Flower Card – 1 Piece</h3>
+                        <h3>Flower Card - 1 Piece</h3>
                         <p class="product-price">RM8.00</p>
                         <p>
                             A compact card featuring a chenille flower, perfect as an add-on gift or
@@ -347,18 +349,18 @@
                     <div class="special-text">
                         <h3>Cake Box Edition</h3>
                         <p>
-                            Chenille “cakes” arranged beautifully in square or round boxes, complete with LED lights.
+                            Chenille â€œcakesâ€ arranged beautifully in square or round boxes, complete with LED lights.
                             Perfect as a long-lasting alternative to real cakes.
                         </p>
                         <ul class="special-list">
                             <li><strong>Square Box:</strong> RM24.00 (including box + LED light)</li>
                             <li><strong>Round Box:</strong> RM25.00 (including box + LED light)</li>
-                            <li><strong>Photo Add-ons:</strong> +RM5.00 to RM8.00 (20–40 photos)</li>
+                            <li><strong>Photo Add-ons:</strong> +RM5.00 to RM8.00 (20 - 40 photos)</li>
                         </ul>
                         <p>
                             You can customise the cake colours, toppings, and overall concept to match your event or theme.
                         </p>
-                        <a href="https://wa.me/60139083945/?text=Order Custom Cake" class="btn text-btn">Discuss a Custom Cake →</a>
+                        <a href="https://wa.me/60139083945/?text=Order Custom Cake" class="btn text-btn">Discuss a Custom Cake â†’</a>
                     </div>
                     <div class="special-image image-placeholder">
                         Upload cake box edition image here
@@ -377,10 +379,10 @@
                         </p>
                         <ul class="special-list">
                             <li><strong>Mini Flower Pot:</strong> RM12.00</li>
-                            <li>Approximate size: 6.3cm × 10.5cm</li>
+                            <li>Approximate size: 6.3cm Ã— 10.5cm</li>
                             <li>Customisable flower type and colour combination</li>
                         </ul>
-                        <a href="https://wa.me/60139083945/?text=Order Mini Flower Pot" class="btn text-btn">Order Mini Flower Pot →</a>
+                        <a href="https://wa.me/60139083945/?text=Order Mini Flower Pot" class="btn text-btn">Order Mini Flower Pot â†’</a>
                     </div>
                 </div>
 
@@ -392,10 +394,10 @@
                             Themed headbands decorated with chenille flowers for special occasions or national day celebrations.
                         </p>
                         <ul class="special-list">
-                            <li>From RM8.00 – RM15.00 (depending on design and fullness)</li>
+                            <li>From RM8.00 - RM15.00 (depending on design and fullness)</li>
                             <li>Custom colours and arrangements available upon request</li>
                         </ul>
-                        <a href="https://wa.me/60139083945/?text=Order Cekak Merdeka" class="btn text-btn">Enquire About Headbands →</a>
+                        <a href="https://wa.me/60139083945/?text=Order Cekak Merdeka" class="btn text-btn">Enquire About Headbands â†’</a>
                     </div>
                     <div class="special-image image-placeholder">
                         Upload headband image here
@@ -410,7 +412,7 @@
                 <div>
                     <h2>Want to Customise Your Own Set?</h2>
                     <p>
-                        Share your inspiration photos, favourite colours, and budget, and we’ll help design something just for you.
+                        Share your inspiration photos, favourite colours, and budget, and we'll help design something just for you.
                     </p>
                 </div>
                 <div>
@@ -423,7 +425,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <p>© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
+            <p>Â© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
@@ -433,3 +435,5 @@
     </footer>
 </body>
 </html>
+
+
