--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact – Our Loves, Our Efforts</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet"><title>Contact — Our Loves, Our Efforts</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <script src="assets/js/main.js" defer></script>
 </head>
@@ -24,7 +26,7 @@
                     <li><a href="products.html#keychain">Keychain</a></li>
                     <li><a href="products.html#flower-card">Flower Card</a></li>
                     <li><a href="products.html#special-edition">Special Edition</a></li>
-                    <li><a href="contact.html" class="active">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
             <button class="menu-toggle" aria-label="Toggle navigation">
@@ -38,7 +40,7 @@
             <div class="container">
                 <h1 class="section-title animate-on-scroll">Contact Us</h1>
                 <p class="section-subtitle animate-on-scroll">
-                    Share your ideas, budget, and preferred date – we’ll get back to you with suggestions and confirmation.
+                    Share your ideas, budget, and preferred date - we'll get back to you with suggestions and confirmation.
                 </p>
             </div>
         </section>
@@ -83,8 +85,8 @@
 
                     <h3>Operating Hours</h3>
                     <p>
-                        <strong>Mon – Fri:</strong> 8:00 PM – 11:00 PM<br>
-                        <strong>Sat – Sun:</strong> Limited slots (depending on order volume)
+                        <strong>Mon - Fri:</strong> 8:00 PM - 11:00 PM<br>
+                        <strong>Sat - Sun:</strong> Limited slots (depending on order volume)
                     </p>
 
                     <h3>Location</h3>
@@ -120,7 +122,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <p>© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
+            <p>Â© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
@@ -130,3 +132,4 @@
     </footer>
 </body>
 </html>
+
