--- a/products.html
+++ b/products.html
@@ -360,7 +360,7 @@
                         <p>
                             You can customise the cake colours, toppings, and overall concept to match your event or theme.
                         </p>
-                        <a href="https://wa.me/60139083945/?text=Order Custom Cake" class="btn text-btn">Discuss a Custom Cake â†’</a>
+                        <a href="https://wa.me/60139083945/?text=Order Custom Cake" class="btn text-btn">Discuss a Custom Cake -></a>
                     </div>
                     <div class="special-image image-placeholder">
                         Upload cake box edition image here
@@ -379,10 +379,10 @@
                         </p>
                         <ul class="special-list">
                             <li><strong>Mini Flower Pot:</strong> RM12.00</li>
-                            <li>Approximate size: 6.3cm Ã— 10.5cm</li>
+                            <li>Approximate size: 6.3cm - 10.5cm</li>
                             <li>Customisable flower type and colour combination</li>
                         </ul>
-                        <a href="https://wa.me/60139083945/?text=Order Mini Flower Pot" class="btn text-btn">Order Mini Flower Pot â†’</a>
+                        <a href="https://wa.me/60139083945/?text=Order Mini Flower Pot" class="btn text-btn">Order Mini Flower Pot -></a>
                     </div>
                 </div>
 
@@ -397,7 +397,7 @@
                             <li>From RM8.00 - RM15.00 (depending on design and fullness)</li>
                             <li>Custom colours and arrangements available upon request</li>
                         </ul>
-                        <a href="https://wa.me/60139083945/?text=Order Cekak Merdeka" class="btn text-btn">Enquire About Headbands â†’</a>
+                        <a href="https://wa.me/60139083945/?text=Order Cekak Merdeka" class="btn text-btn">Enquire About Headbands -></a>
                     </div>
                     <div class="special-image image-placeholder">
                         Upload headband image here
