--- a/about.html
+++ b/about.html
@@ -136,7 +136,7 @@
     <!-- Footer -->
     <footer class="site-footer">
         <div class="container footer-inner">
-            <p>Â© <span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
+            <p>&copy;<span id="year"></span> Our Loves, Our Efforts. All rights reserved.</p>
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
