--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         Whether you're gifting a bouquet, decorating a room, or collecting keychains,
                         we want each creation to feel uniquely yours.
                     </p>
-                    <a href="about.html" class="btn text-btn">Learn more about us -></a>
+                    <a href="about.html" class="btn text-btn">Learn more about us →</a>
                 </div>
                 <div class="story-image animate-on-scroll">
                     <div class="image-placeholder">
