--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">OL</span>
-                <span class="logo-text">Our Loves, Our Efforts</span>
+                <span class="logo-mark">IC</span>
+                <span class="logo-text">IZSY Chenille</span>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -140,7 +140,7 @@
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
-                <a href="contact.html">WhatsApp</a>
+                <a href="https://wa.me/60139083945/?text=Order Chenille">WhatsApp</a>
             </div>
         </div>
     </footer>
