--- a/contact.html
+++ b/contact.html
@@ -14,8 +14,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">OL</span>
-                <span class="logo-text">Our Loves, Our Efforts</span>
+                <span class="logo-mark">IC</span>
+                <span class="logo-text">IZSY Chenille</span>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -78,15 +78,15 @@
                         For faster response, feel free to contact us directly on WhatsApp or social media.
                     </p>
                     <ul class="contact-list">
-                        <li><strong>WhatsApp:</strong> <a href="https://wa.me/60139083945" target="_blank" rel="noopener">+60 13-908 3945</a></li>
-                        <li><strong>Instagram:</strong> <a href="https://www.instagram.com" target="_blank" rel="noopener">@ourloves.ourefforts</a></li>
-                        <li><strong>TikTok:</strong> <a href="https://www.tiktok.com" target="_blank" rel="noopener">@ourloves.ourefforts</a></li>
+                        <li><strong>WhatsApp:</strong> <a href="https://wa.me/60139083945/?text=Order Chenille" target="_blank" rel="noopener">+60 13-908 3945</a></li>
+                        <li><strong>Instagram:</strong> <a href="https://www.instagram.com" target="_blank" rel="noopener">@IZSY Chenille</a></li>
+                        <li><strong>TikTok:</strong> <a href="https://www.tiktok.com" target="_blank" rel="noopener">@IZSY Chenille</a></li>
                     </ul>
 
                     <h3>Operating Hours</h3>
                     <p>
-                        <strong>Mon - Fri:</strong> 8:00 PM - 11:00 PM<br>
-                        <strong>Sat - Sun:</strong> Limited slots (depending on order volume)
+                        <strong>Sun - Thu:</strong> 10:00 AM - 10:00 PM<br>
+                        <strong>Fri - Sat:</strong> Limited slots (depending on order volume)
                     </p>
 
                     <h3>Location</h3>
@@ -111,7 +111,7 @@
                     </p>
                 </div>
                 <div>
-                    <a href="https://wa.me/60139083945" target="_blank" rel="noopener" class="btn primary-btn">
+                    <a href="https://wa.me/60139083945/?text=Order Chenille" target="_blank" rel="noopener" class="btn primary-btn">
                         Chat on WhatsApp
                     </a>
                 </div>
@@ -126,7 +126,7 @@
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
-                <a href="https://wa.me/60139083945">WhatsApp</a>
+                <a href="https://wa.me/60139083945/?text=Order Chenille">WhatsApp</a>
             </div>
         </div>
     </footer>
