--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">OL</span>
-                <span class="logo-text">Our Loves, Our Efforts</span>
+                <span class="logo-mark">IC</span>
+                <span class="logo-text">IZSY Chenille</span>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -45,7 +45,7 @@
                 <p class="hero-tagline">Chenille flowers</p>
                 <h1 class="hero-title">Bring home the joy in handmade blooms.</h1>
                 <p class="hero-subtitle">
-                    Small-batch bouquets, tiny keychains, and gift-ready box florals with bold colour hits and soft yarn textures.
+                    Small-batch bouquets, tiny keychains, and gift-ready box florals with bold colour hits and soft chenille textures.
                 </p>
                 <div class="hero-actions">
                     <a href="products.html#price" class="btn primary-btn">Shop the collection</a>
@@ -67,8 +67,7 @@
                             <span class="slide-pill">Bouquets</span>
                         </div>
                         <div class="slide-media">Add bouquet photo</div>
-                        <h3>Pastel Maki Wrap</h3>
-                        <p>Layered lilac petals and coral accents wrapped in soft mesh - built to steal the shot.</p>
+                        <h3>Surprise Your Loved Ones</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Limited 25 sets</span>
                             <span class="slide-link">See details</span>
@@ -80,8 +79,7 @@
                             <span class="slide-pill">Keychains</span>
                         </div>
                         <div class="slide-media">Add keychain photo</div>
-                        <h3>Sakura Pocket Bloom</h3>
-                        <p>Plush mini bloom with glossy bead centre - ready for bags, pouches, and gifts.</p>
+                        <h3>Daisy Pocket Bloom</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Mix & match</span>
                             <span class="slide-link">See details</span>
@@ -93,8 +91,7 @@
                             <span class="slide-pill">Flower Card</span>
                         </div>
                         <div class="slide-media">Add flower card photo</div>
-                        <h3>Petal Postcards</h3>
-                        <p>Chenille blooms with a message card—compact, thoughtful, and ready to gift.</p>
+                        <h3>Flower Cards</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Bundles available</span>
                             <span class="slide-link">See details</span>
@@ -106,8 +103,7 @@
                             <span class="slide-pill">Specials</span>
                         </div>
                         <div class="slide-media">Add special edition photo</div>
-                        <h3>Cake Box Florals</h3>
-                        <p>Chenille florals tucked into a keepsake box - perfect for birthdays and bridal mornings.</p>
+                        <h3>Special Edition (Independence Day)</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Gift-ready</span>
                             <span class="slide-link">See details</span>
@@ -143,7 +139,7 @@
             <div class="rail-card"><span class="swatch" style="--swatch:#000000;"></span>Black</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#b5e8b7;"></span>Pastel Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#d9f5d8;"></span>Tint Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Army Green</div>
+            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#0f7b1c;"></span>Dark Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#ffffff;"></span>White</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#f8c9d3;"></span>Light Pink</div>
@@ -163,7 +159,7 @@
             <div class="rail-card"><span class="swatch" style="--swatch:#000000;"></span>Black</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#b5e8b7;"></span>Pastel Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#d9f5d8;"></span>Tint Green</div>
-            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Army Green</div>
+            <div class="rail-card"><span class="swatch" style="--swatch:#7fbf72;"></span>Light Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#0f7b1c;"></span>Dark Green</div>
             <div class="rail-card"><span class="swatch" style="--swatch:#ffffff;"></span>White</div>
         </div>
@@ -173,7 +169,7 @@
             <div class="container">
                 <h2 class="section-title animate-on-scroll">Explore Our Collection</h2>
                 <p class="section-subtitle animate-on-scroll">
-                    Choose the purple story you love - mix and match by price, color, style, and edition.
+                    Choose the design you love - mix and match by price, color, style, and edition.
                 </p>
                 <div class="highlight-grid">
                     <a href="products.html#price" class="highlight-card animate-on-scroll">
@@ -255,7 +251,7 @@
                 <div class="story-text animate-on-scroll">
                     <h2>Handmade with patience and heart</h2>
                     <p>
-                        Every chenille flower is carefully handwoven using soft, cozy yarn.
+                        Every chenille flower is carefully handcrafted using soft, cozy chenille.
                         Our goal is to create pieces that not only look beautiful, but also carry
                         feelings of comfort, nostalgia, and warmth.
                     </p>
@@ -297,7 +293,7 @@
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
-                <a href="https://wa.me/60139083945">WhatsApp</a>
+                <a href="https://wa.me/60139083945/?text=Order Chenille">WhatsApp</a>
             </div>
         </div>
     </footer>
