--- a/products.html
+++ b/products.html
@@ -14,8 +14,8 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">OL</span>
-                <span class="logo-text">Our Loves, Our Efforts</span>
+                <span class="logo-mark">IC</span>
+                <span class="logo-text">IZSY Chenille</span>
             </div>
             <nav class="main-nav">
                 <ul>
@@ -183,7 +183,7 @@
                     </div>
                     <div class="color-item animate-on-scroll">
                         <span class="color-swatch" style="background: #90EE90;"></span>
-                        <span class="color-name">Light Army Green</span>
+                        <span class="color-name">Light Green</span>
                     </div>
                     <div class="color-item animate-on-scroll">
                         <span class="color-swatch" style="background: #006400;"></span>
@@ -253,7 +253,7 @@
                     <article class="product-card animate-on-scroll">
                         <h3>Custom Ala Carte</h3>
                         <p class="product-price">From RM50</p>
-                        <p class="product-desc">Design your own colour combo, flower mix, and style.</p>
+                        <p class="product-desc">Design your own colour combo, flower mix, and style (big flower or vast).</p>
                     </article>
                 </div>
             </div>
@@ -305,7 +305,7 @@
                     <article class="product-card animate-on-scroll">
                         <h3>Custom Character</h3>
                         <p class="product-price">RM7.00 - RM10.00</p>
-                        <p class="product-desc">Fan-favourite characters in soft chenille form. Request your own character design (subject to feasibility).</p>
+                        <p class="product-desc">Fan-favourite characters. Request your own character design (subject to feasibility).</p>
                     </article>
                 </div>
             </div>
@@ -316,7 +316,7 @@
             <div class="container">
                 <h2 class="section-title animate-on-scroll">Flower Card</h2>
                 <p class="section-subtitle animate-on-scroll">
-                    A petite and thoughtful way to say "thank you", "congratulations", or "I'm thinking of you".
+                    A thoughtful way to say "thank you", "congratulations", or "I'm thinking of you".
                 </p>
                 <div class="single-product-layout animate-on-scroll">
                     <div class="single-product-image image-placeholder">
@@ -349,12 +349,12 @@
                     <div class="special-text">
                         <h3>Cake Box Edition</h3>
                         <p>
-                            Chenille â€œcakesâ€ arranged beautifully in square or round boxes, complete with LED lights.
+                            Chenille "cakes" arranged beautifully in square or round boxes, complete with LED lights.
                             Perfect as a long-lasting alternative to real cakes.
                         </p>
                         <ul class="special-list">
-                            <li><strong>Square Box:</strong> RM24.00 (including box + LED light)</li>
-                            <li><strong>Round Box:</strong> RM25.00 (including box + LED light)</li>
+                            <li><strong>Square Box:</strong> RM30.00 (including box + LED light)</li>
+                            <li><strong>Round Box:</strong> RM30.00 (including box + LED light)</li>
                             <li><strong>Photo Add-ons:</strong> +RM5.00 to RM8.00 (20 - 40 photos)</li>
                         </ul>
                         <p>
@@ -429,7 +429,7 @@
             <div class="footer-links">
                 <a href="https://www.instagram.com" target="_blank" rel="noopener">Instagram</a>
                 <a href="https://www.tiktok.com" target="_blank" rel="noopener">TikTok</a>
-                <a href="https://wa.me/60139083945">WhatsApp</a>
+                <a href="https://wa.me/60139083945/?text=Order Chenille">WhatsApp</a>
             </div>
         </div>
     </footer>
