--- a/index.html
+++ b/index.html
@@ -66,7 +66,9 @@
                             <span class="slide-badge">New drop</span>
                             <span class="slide-pill">Bouquets</span>
                         </div>
-                        <div class="slide-media">Add bouquet photo</div>
+                        <div class="slide-media">
+                            <img src="assets/images/DATASLIDE0.svg" alt="Bouquet showcase" loading="lazy">
+                        </div>
                         <h3>Surprise Your Loved Ones</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Limited 25 sets</span>
@@ -78,7 +80,9 @@
                             <span class="slide-badge">Tiny fav</span>
                             <span class="slide-pill">Keychains</span>
                         </div>
-                        <div class="slide-media">Add keychain photo</div>
+                        <div class="slide-media">
+                            <img src="assets/images/DATASLIDE1.svg" alt="Keychain selection" loading="lazy">
+                        </div>
                         <h3>Daisy Pocket Bloom</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Mix & match</span>
@@ -90,7 +94,9 @@
                             <span class="slide-badge">Sweet note</span>
                             <span class="slide-pill">Flower Card</span>
                         </div>
-                        <div class="slide-media">Add flower card photo</div>
+                        <div class="slide-media">
+                            <img src="assets/images/DATASLIDE2.svg" alt="Flower card designs" loading="lazy">
+                        </div>
                         <h3>Flower Cards</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Bundles available</span>
@@ -102,7 +108,9 @@
                             <span class="slide-badge">Showstopper</span>
                             <span class="slide-pill">Specials</span>
                         </div>
-                        <div class="slide-media">Add special edition photo</div>
+                        <div class="slide-media">
+                            <img src="assets/images/DATASLIDE3.svg" alt="Special edition bouquet" loading="lazy">
+                        </div>
                         <h3>Special Edition (Independence Day)</h3>
                         <div class="slide-foot">
                             <span class="slide-tag">Gift-ready</span>
@@ -262,8 +270,9 @@
                     <a href="about.html" class="btn text-btn">Learn more about us →</a>
                 </div>
                 <div class="story-image animate-on-scroll">
-                    <div class="image-placeholder">
-                        Upload your bouquet image here
+                    <div class="story-gallery">
+                        <img src="assets/images/HOMEPAGE1.svg" alt="Handheld bouquet of colorful chenille flowers" loading="lazy">
+                        <img src="assets/images/HOMEPAGE2.svg" alt="Wrapped stems of pastel chenille flowers" loading="lazy">
                     </div>
                 </div>
             </div>
