--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="hero-meta">
                     <span class="meta-chip">Pre-order only</span>
                     <span class="meta-chip">Ships in 5-7 days</span>
-                    <span class="meta-chip">❤️</span>
+                    <span class="meta-chip">🌼</span>
                 </div>
             </div>
             <div class="hero-visual animate-on-scroll">
@@ -71,7 +71,7 @@
                         </div>
                         <h3>Surprise Your Loved Ones</h3>
                         <div class="slide-foot">
-                            <span class="slide-tag">Limited 25 sets</span>
+                            <span class="slide-tag">Custom yours</span>
                             <span class="slide-link">See details</span>
                         </div>
                     </a>
@@ -272,7 +272,6 @@
                 <div class="story-image animate-on-scroll">
                     <div class="story-gallery">
                         <img src="assets/images/HOMEPAGE1.svg" alt="Handheld bouquet of colorful chenille flowers" loading="lazy">
-                        <img src="assets/images/HOMEPAGE2.svg" alt="Wrapped stems of pastel chenille flowers" loading="lazy">
                     </div>
                 </div>
             </div>
